<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.view.LoginActivity">

        <LinearLayout
            android:id="@+id/activity_registraion_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/activity_regis_background"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/activity_registration_iv_back"
                android:layout_width="67dp"
                android:layout_height="62dp"
                android:contentDescription="@string/quay_lai"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher_back_adaptive_fore" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="-60dp"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:text="@string/activity_login_login"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/activity_registration_iv_back"
                app:layout_constraintTop_toTopOf="@+id/activity_main_mtCaiDat" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="197dp"
            android:layout_height="193dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_registraion_layout"
            app:srcCompat="@mipmap/icon_logo" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="-10dp"
            android:text="@string/activity_login_phone"
            android:textColor="@color/tvXam"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/activity_login_et_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/activity_login_pass"
            android:textColor="@color/tvXam"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_et_phone" />

        <EditText
            android:id="@+id/activity_login_et_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="text|textPassword"
            android:maxWidth="200dp"
            android:paddingEnd="115dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <ImageView
            android:id="@+id/actvity_login_iv_eye_hiden"
            android:layout_width="58dp"
            android:layout_height="61dp"
            android:layout_marginEnd="72dp"
            android:layout_marginBottom="-3dp"
            app:layout_constraintBottom_toBottomOf="@+id/activity_login_et_pass"
            app:layout_constraintEnd_toEndOf="@+id/activity_login_et_pass"
            app:srcCompat="@mipmap/icon_eye_hidden" />

        <View
            android:id="@+id/view"
            android:layout_width="30dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="-19dp"
            android:layout_marginTop="16dp"
            android:background="@color/tvXam"
            android:rotation="90"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/actvity_login_iv_eye_hiden"
            app:layout_constraintTop_toTopOf="@+id/activity_login_et_pass" />

        <TextView
            android:id="@+id/activity_login_tv_forgot_pass"
            android:layout_width="66dp"
            android:layout_height="35dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="20dp"
            android:text="@string/activity_login_forgot_pass"
            android:textColor="#03A9F4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/actvity_login_iv_eye_hiden"
            app:layout_constraintTop_toTopOf="@+id/activity_login_et_pass" />

        <TextView
            android:id="@+id/activity_login_tv_regis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:text="@string/activity_main_dang_ky"
            android:textColor="#03A9F4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_et_pass" />

        <Button
            android:id="@+id/activity_login_btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/regis_before"
            android:enabled="false"
            android:text="@string/activity_login_login"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_tv_regis" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape"
            android:backgroundTint="#BEB9B9"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar2"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/shape"
            android:backgroundTint="#BEB9B9"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:text="@string/activity_login_facebook"
            app:layout_constraintBottom_toBottomOf="@+id/materialToolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/materialToolbar" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_login_gooogle"
            app:layout_constraintBottom_toBottomOf="@+id/materialToolbar2"
            app:layout_constraintEnd_toEndOf="@+id/materialToolbar2"
            app:layout_constraintHorizontal_bias="0.452"
            app:layout_constraintStart_toStartOf="@+id/materialToolbar2"
            app:layout_constraintTop_toTopOf="@+id/materialToolbar2"
            app:layout_constraintVertical_bias="0.428" />

        <View
            android:id="@+id/view2"
            android:layout_width="120dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="28dp"
            android:background="@color/tvXam"
            android:rotation="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_btn_login" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="5dp"
            android:text="@string/activity_login_or"
            app:layout_constraintEnd_toStartOf="@+id/view2"
            app:layout_constraintHorizontal_bias="0.524"
            app:layout_constraintStart_toEndOf="@+id/view1"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_btn_login" />

        <View
            android:id="@+id/view1"
            android:layout_width="120dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:background="@color/tvXam"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>